// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Histogram component should render when binSize prop is provided and with the correct number of bins 1`] = `
<DocumentFragment>
  <div
    class="histogram"
    data-testid="histogram"
  >
    <div
      class="histogram__bar-container"
      style="height: 300px;"
    >
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 0ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 100ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 200ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 300ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 400ms;"
      />
    </div>
    <svg
      height="80"
      style="top: 300px;"
      width="100%"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
      >
        <path
          class="domain"
          d="M0.5,0.5H250.5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <line
            stroke="currentColor"
            y2="0"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="6"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(56.05555555555555,0)"
        >
          <line
            stroke="currentColor"
            y2="0"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="6"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(111.6111111111111,0)"
        >
          <line
            stroke="currentColor"
            y2="0"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="6"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(167.16666666666666,0)"
        >
          <line
            stroke="currentColor"
            y2="0"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="6"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(222.7222222222222,0)"
        >
          <line
            stroke="currentColor"
            y2="0"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="6"
          >
            8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(278.27777777777777,0)"
        >
          <line
            stroke="currentColor"
            y2="0"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="6"
          >
            10
          </text>
        </g>
      </g>
      <text
        style="text-anchor: middle;"
        transform="translate(125, 40)"
      >
        x axis
      </text>
    </svg>
    <svg
      class="y-axis"
      height="300"
      width="80"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(50, 0)"
      >
        <path
          class="domain"
          d="M0.5,300.5V0.5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,300.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            0.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,270.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            0.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,240.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            1.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,210.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            1.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,180.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            2.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,150.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            2.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            3.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,90.50000000000001)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            3.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,60.499999999999986)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            4.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,30.499999999999993)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            4.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            5.0
          </text>
        </g>
      </g>
      <text
        style="text-anchor: middle;"
        transform="rotate(-90)"
        x="-150"
        y="20"
      >
        y axis
      </text>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Histogram component should render when nBins prop is provided and with the correct number of bins 1`] = `
<DocumentFragment>
  <div
    class="histogram"
    data-testid="histogram"
  >
    <div
      class="histogram__bar-container"
      style="height: 300px;"
    >
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(1); transition-delay: 0ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(1); transition-delay: 250ms;"
      />
    </div>
    <svg
      height="80"
      style="top: 300px;"
      width="100%"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
      >
        <path
          class="domain"
          d="M0.5,0.5H250.5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <line
            stroke="currentColor"
            y2="0"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="6"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(125.5,0)"
        >
          <line
            stroke="currentColor"
            y2="0"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="6"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(250.5,0)"
        >
          <line
            stroke="currentColor"
            y2="0"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="6"
          >
            9
          </text>
        </g>
      </g>
      <text
        style="text-anchor: middle;"
        transform="translate(125, 40)"
      >
        x axis
      </text>
    </svg>
    <svg
      class="y-axis"
      height="300"
      width="80"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(50, 0)"
      >
        <path
          class="domain"
          d="M0.5,300.5V0.5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,300.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            0.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,270.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            0.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,240.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            1.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,210.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            1.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,180.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            2.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,150.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            2.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            3.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,90.50000000000001)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            3.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,60.499999999999986)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            4.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,30.499999999999993)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            4.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            5.0
          </text>
        </g>
      </g>
      <text
        style="text-anchor: middle;"
        transform="rotate(-90)"
        x="-150"
        y="20"
      >
        y axis
      </text>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Histogram component should render without axes if no label provided 1`] = `
<DocumentFragment>
  <div
    class="histogram"
    data-testid="histogram"
  >
    <div
      class="histogram__bar-container"
      style="height: 300px;"
    >
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(1); transition-delay: 0ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(1); transition-delay: 250ms;"
      />
    </div>
  </div>
</DocumentFragment>
`;
